--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>solution</title>
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/font-awesome.min.css">
+
+    <title>Roche &amp; Fils - Impression calendrier hebdomadaire</title>
   </head>
   <body>
     <noscript>
