FIxe les styles imprimables

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/font-awesome.min.css">
-    <link rel="stylesheet" href="./print.css" media="printer">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/print.css" media="print">
 
     <title>Roche &amp; Fils - Impression calendrier hebdomadaire</title>
   </head>
