--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
       <strong>We're sorry but solution doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+
+    <script src="https://apis.google.com/js/api.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
