--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>css/font-awesome.min.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>css/print.css" media="print">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/print.css" media="print">
 
     <title>Roche &amp; Fils - Impression calendrier hebdomadaire</title>
   </head>
